--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "mysql2": "^3.3.0",
     "node-cron": "^3.0.3",
     "npm": "^10.3.0",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "sequelize": "^6.31.1"
   },
   "devDependencies": {
@@ -40,6 +42,7 @@
     "@types/multer": "^1.4.8",
     "@types/node": "^20.8.4",
     "@types/node-cron": "^3.0.11",
+    "@types/passport-google-oauth20": "^2.0.14",
     "sequelize-cli": "^6.6.0",
     "tailwindcss": "^3.3.5",
     "ts-node-dev": "^2.0.0",
