--- a/package.json
+++ b/package.json
@@ -21,13 +21,13 @@
     "exceljs": "^4.4.0",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.2",
-    "helmet": "^7.0.0",
-    "jsonwebtoken": "^9.0.0",
+    "jsonwebtoken": "^9.0.2",
     "jszip": "^3.10.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.3.0",
     "node-cron": "^3.0.3",
+    "nodemailer": "^6.9.13",
     "npm": "^10.3.0",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
@@ -42,6 +42,7 @@
     "@types/multer": "^1.4.8",
     "@types/node": "^20.8.4",
     "@types/node-cron": "^3.0.11",
+    "@types/nodemailer": "^6.4.15",
     "@types/passport-google-oauth20": "^2.0.14",
     "sequelize-cli": "^6.6.0",
     "tailwindcss": "^3.3.5",
